[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoriessong-com"
version = "0.1.1"
description = "Python metadata and integration helper package for Wan27 AI video workflows for https://wan27.org"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Wan27", email = "support@wan27.org" }]
keywords = ["wan27.org", "metadata", "integration", "seo"]

[project.urls]
Homepage = "https://wan27.org"
Documentation = "https://wan27.org/docs"
Repository = "https://github.com/youram470-art/memoriessong-com-python"
Issues = "https://github.com/youram470-art/memoriessong-com-python/issues"

[tool.setuptools.packages.find]
where = ["src"]
